subindo projeto, trabalhando com rotas

--- a/Angular-Rota/src/app/shared/menu/menu.component.html
+++ b/Angular-Rota/src/app/shared/menu/menu.component.html
@@ -10,6 +10,9 @@
             <li>
                 <button mat-button color="primary" routerLink="404" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">Error</button>
             </li>
+            <li>
+                <button mat-button color="primary" routerLink="dashboard" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">Dash</button>
+            </li>
         </ul>
     </nav>
 </header>
